# SampLNS

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE.md  MANIFEST.in  README.md  conanfile.txt  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
cmake/: CPM.cmake
cmake/conan/gurobi_public/: CMakeLists.txt  conandata.yml  conanfile.py
cmake/conan/gurobi_public/test_package/: conanfile.py
docs/: conf.py  index.rst  install.rst  modules.rst  samplns.baseline.rst  samplns.cds.rst  samplns.instances.rst  samplns.lns.rst  samplns.preprocessor.rst  samplns.rst  samplns.simple.rst  samplns.utils.rst  samplns.verify.rst  tests.rst
evaluation/: README.md
evaluation/00_baseline/: 00_check_data.ipynb  01_extract_simplified_data.ipynb  02_verify_correctness.ipynb  CHANGELOG.md  README.md  _conf.py
evaluation/00_baseline/_utils/: __init__.py
evaluation/01_ICSE_2024_0/: 01_run_samplns.py  02_check_correctness_of_solutions.py  03_look_into_the_data.ipynb  04_cleaning_data.ipynb  06_overview_table.ipynb  07_lower_bound_gap.ipynb  08_convergence.ipynb
evaluation/01_ICSE_2024_0/_utils/: __init__.py
evaluation/01_samplns_2023-08-19/: 00_check_featureide.ipynb  01_run_samplns.py  03_look_into_data.ipynb  04_cleaning_data.ipynb  06_overview_table.ipynb  07_lower_bound_gap.ipynb  CHANGELOG.md  README.md  _conf.py
evaluation/01_samplns_2023-08-19/EXTERNAL_INPUT/: README.md
evaluation/01_samplns_2023-08-19/OUTPUT/: 06_best_bounds.csv
evaluation/01_samplns_2023-08-19/_utils/: __init__.py
evaluation/02_60min_samplns_2023-08-19/: 03_look_into_data.ipynb  04_cleaning_data.ipynb  07_lower_bound_gap.ipynb  CHANGELOG.md  README.md  _conf.py
evaluation/02_60min_samplns_2023-08-19/_utils/: __init__.py
evaluation/02_improved/: 01_run_samplns.py  02_check_correctness_of_solutions.py  03_look_into_data.ipynb  04_cleaning_data.ipynb  06_overview_table.ipynb  07_lower_bound_gap.ipynb  08_convergence.ipynb
evaluation/02_improved/_utils/: __init__.py
evaluation/03_60min_samplns_long_iterations_2023-08-19/: 01_run_samplns.py  06_overview_table.ipynb  07_lower_bound_gap.ipynb  CHANGELOG.md  README.md  _conf.py
evaluation/03_reinforcment_learning_comparison/: 02_verify.py  04_cleaning_data.ipynb  _conf.py  _utils.py
evaluation/04_based_on_yasa/: 00_check_featureide.ipynb  01_run_samplns.py  02_check_correctness_of_solutions.py  03_look_into_data.ipynb  04_cleaning_data.ipynb  06_overview_table.ipynb  07_lower_bound_gap.ipynb  CHANGELOG.md  README.md
evaluation/04_based_on_yasa/_utils/: __init__.py
evaluation/04_super_long_samplns/: 00_check_featureide.ipynb  01_run_samplns.py  03_look_into_data.ipynb  04_cleaning_data.ipynb  06_overview_table.ipynb  07_lower_bound_gap.ipynb  CHANGELOG.md  README.md  _conf.py
evaluation/04_super_long_samplns/OUTPUT/: 06_best_bounds.csv  07_avg_final_time.csv
evaluation/04_super_long_samplns/_utils/: __init__.py
evaluation/05_baseline/: 01_check_data.ipynb  02_extract_simplified_data.ipynb  04_analyze.ipynb  CHANGELOG.md  README.md
evaluation/05_baseline/_utils/: __init__.py
evaluation/05_initial_sample_comparison/: 00_check_featureide.ipynb  01_run_samplns.py  02_check_correctness_of_solutions.py  03_look_into_data.ipynb  04_cleaning_data.ipynb  05_lower_bound_gap.ipynb  CHANGELOG.md  README.md  _conf.py
evaluation/05_initial_sample_comparison/_utils/: __init__.py
evaluation/06_cds_improvements/: 04_cleaning_data.ipynb  06_overview_table.ipynb  07_lower_bound_gap.ipynb  08_convergence.ipynb  CHANGELOG.md  README.md  _conf.py
evaluation/06_yasa_15min/: 00_run_benchmark.py  01_verify_results.ipynb  02_extract_results.py  _conf.py  simplified_data.json.xz
evaluation/06_yasa_15min/_utils/: __init__.py
evaluation/07_long_optimization/: 03_look_into_data.ipynb  04_cleaning_data.ipynb  06_overview_table.ipynb  _conf.py
evaluation/07_updated_samplns_15min/: 00_run_benchmark.py
evaluation/08_longer_iterations/: 01_run_samplns.py  03_look_into_data.ipynb  04_cleaning_data.ipynb  06_overview_table.ipynb  CHANGELOG.md  _conf.py
evaluation/08_updated_3hrs/: 00_run_benchmark.py
evaluation/2024-03-05/: config.toml
evaluation/2024-03-05/00_baseline/: 00_extract_data.py  01_quick_glance.ipynb  README.md
evaluation/2024-03-05/01_yasa_15min/: 00_run_benchmark.py  01_verify_results.ipynb  02_extract_results.py  simplified_data.json.xz
evaluation/2024-03-05/02_samplns_15min/: 00_run_benchmark.py  01_quick_glance.ipynb  02_extract_data.py  03_extract_time_of_last_improvement.ipynb
examples/01_toybox/: README.md  optimize.py  yasa_sample.json
examples/02_emb/: README.md  optimize.py
examples/03_combined/: README.md  optimize.py  run_picasso.sh  run_toybox.sh
experiments/02_lb_ub_integration_experiment/: compare_integration.ipynb  integration_experiment.py
experiments/03_integration_experiment_financial/: format_solution.py
experiments/04_adaptive_seq_fixing/: adaptive_seq_fixing_experiment.py  compare_lb.ipynb
experiments/05_force_exact_max_free_edges/: compare_lb.ipynb  force_max_free_edges_experiment.py
experiments/06_stagnation_detection/: compare_lb.ipynb  stagnation_detection.py
experiments/07_start_solutions/: compare_lb.ipynb  comparing_start_solutions.py
experiments/08_ip_hints/: compare_lb.ipynb  ip_hints_experiment.py
experiments/09_lb_ub_integration_experiment copy/: integration_experiment.py
include/: graph.hpp  instance.hpp  lns.hpp  logger.hpp  parser.hpp  timer.hpp
include/cds/: cds.hpp  cds_genetic.hpp  cds_greedy.hpp  cds_heuristic.hpp  cds_ip.hpp  cds_lns.hpp  cds_operations.hpp
include/mis/: mis_ip.hpp
pysrc/: CMakeLists.txt
pysrc/samplns/: CMakeLists.txt  __init__.py  __main__.py
pysrc/samplns/verify/: CMakeLists.txt  __init__.py  _native_verify.cpp  _verify.cpp  compare.py
pysrc/tests/: test_modules.py  test_sample_mip.py  test_universe_mapping.py
src/: CMakeLists.txt
src/cds/: CMakeLists.txt  cds.cpp
tests/: test_baseline.py  test_gurobi_license.py  test_modules.py  test_sample_mip.py  test_xml.py
(+84 files in other folders)
