[build-system]
requires = [
    "conan>=2.0.0",
    "setuptools",
    "skbuild_conan>=0.1.2",
    "scikit-build>=0.16.7",
    "cmake>=3.17",
    "ninja",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "info"
testpaths = ["tests"]